sage/websage/src/gena/GenaParser.js
// Generated from Gena.g4 by ANTLR 4.9.1
// jshint ignore: start
import antlr4 from 'antlr4';
import GenaListener from './GenaListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class GenaParser extends antlr4.Parser {

    static grammarFileName = "Gena.g4";
    static literalNames = [ null, "';'", "','", "':'", "'('", "')'", "'.'", 
                            "'{'", "'}'", "'initializes'", null, null, "'->'", 
                            null, "'noid'", "'copath'", "'class'", "'data'", 
                            "'extends'", "'nary'", "'event'", "'param'", 
                            "'callinto'", "'caller'", "'belongsto'", "'piggyafter'", 
                            "'piggyinto'", "'piggybefore'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, "WS", "Comment", "EvtPathConnector", 
                             "OPCHAR", "Noid", "Copath", "Class", "Data", 
                             "Extends", "Nary", "Event", "Param", "Callinto", 
                             "Caller", "Belongsto", "PiggyAfter", "PiggyInto", 
                             "PiggyBefore", "DataType", "Iden", "INT", "FLOAT" ];
    static ruleNames = [ "doc", "docStmt", "docStmtNse", "stmtNse", "nseModel", 
                         "nseModelName", "nseModelProp", "nseModelPropKey", 
                         "nseModelPropVal", "nseIden", "nseCurly", "stmtCopath", 
                         "stmtExtends", "stmtInitializes", "stmtCaller", 
                         "stmtCallinto", "eventPath", "eventSpec", "eventName", 
                         "eventTargetArgs", "eventTarget", "eventCurly" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = GenaParser.ruleNames;
        this.literalNames = GenaParser.literalNames;
        this.symbolicNames = GenaParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	doc() {
	    let localctx = new DocContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, GenaParser.RULE_doc);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 45; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 44;
	            this.docStmt();
	            this.state = 47; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===GenaParser.DataType || _la===GenaParser.Iden);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	docStmt() {
	    let localctx = new DocStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, GenaParser.RULE_docStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 49;
	        this.docStmtNse();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	docStmtNse() {
	    let localctx = new DocStmtNseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, GenaParser.RULE_docStmtNse);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 51;
	        this.stmtNse();
	        this.state = 52;
	        this.match(GenaParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stmtNse() {
	    let localctx = new StmtNseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, GenaParser.RULE_stmtNse);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 54;
	        this.nseIden();
	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===GenaParser.T__1) {
	            this.state = 55;
	            this.match(GenaParser.T__1);
	            this.state = 56;
	            this.nseIden();
	            this.state = 61;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 64;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===GenaParser.T__2) {
	            this.state = 62;
	            this.match(GenaParser.T__2);
	            this.state = 63;
	            this.nseModel();
	        }

	        this.state = 69;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GenaParser.Event) | (1 << GenaParser.Param) | (1 << GenaParser.DataType) | (1 << GenaParser.Iden))) !== 0)) {
	            this.state = 66;
	            this.nseModel();
	            this.state = 71;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 73;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===GenaParser.T__6) {
	            this.state = 72;
	            this.nseCurly();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nseModel() {
	    let localctx = new NseModelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, GenaParser.RULE_nseModel);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 75;
	        this.nseModelName();
	        this.state = 87;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===GenaParser.T__3) {
	            this.state = 76;
	            this.match(GenaParser.T__3);
	            this.state = 77;
	            this.nseModelProp();
	            this.state = 82;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===GenaParser.T__1) {
	                this.state = 78;
	                this.match(GenaParser.T__1);
	                this.state = 79;
	                this.nseModelProp();
	                this.state = 84;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 85;
	            this.match(GenaParser.T__4);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nseModelName() {
	    let localctx = new NseModelNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, GenaParser.RULE_nseModelName);
	    try {
	        this.state = 92;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case GenaParser.Event:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 89;
	            this.match(GenaParser.Event);
	            break;
	        case GenaParser.Param:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 90;
	            this.match(GenaParser.Param);
	            break;
	        case GenaParser.DataType:
	        case GenaParser.Iden:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 91;
	            this.nseIden();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nseModelProp() {
	    let localctx = new NseModelPropContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, GenaParser.RULE_nseModelProp);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.nseModelPropKey();
	        this.state = 97;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===GenaParser.T__2) {
	            this.state = 95;
	            this.match(GenaParser.T__2);
	            this.state = 96;
	            this.nseModelPropVal();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nseModelPropKey() {
	    let localctx = new NseModelPropKeyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, GenaParser.RULE_nseModelPropKey);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 99;
	        this.nseIden();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nseModelPropVal() {
	    let localctx = new NseModelPropValContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, GenaParser.RULE_nseModelPropVal);
	    try {
	        this.state = 104;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case GenaParser.DataType:
	        case GenaParser.Iden:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 101;
	            this.nseIden();
	            break;
	        case GenaParser.INT:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 102;
	            this.match(GenaParser.INT);
	            break;
	        case GenaParser.FLOAT:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 103;
	            this.match(GenaParser.FLOAT);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nseIden() {
	    let localctx = new NseIdenContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, GenaParser.RULE_nseIden);
	    var _la = 0; // Token type
	    try {
	        this.state = 115;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case GenaParser.DataType:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 106;
	            this.match(GenaParser.DataType);
	            break;
	        case GenaParser.Iden:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 107;
	            this.match(GenaParser.Iden);
	            this.state = 112;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===GenaParser.T__5) {
	                this.state = 108;
	                this.match(GenaParser.T__5);
	                this.state = 109;
	                this.match(GenaParser.Iden);
	                this.state = 114;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nseCurly() {
	    let localctx = new NseCurlyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, GenaParser.RULE_nseCurly);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 117;
	        this.match(GenaParser.T__6);
	        this.state = 126; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 126;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case GenaParser.Copath:
	                this.state = 118;
	                this.stmtCopath();
	                break;
	            case GenaParser.Extends:
	                this.state = 119;
	                this.stmtExtends();
	                break;
	            case GenaParser.T__8:
	                this.state = 120;
	                this.stmtInitializes();
	                break;
	            case GenaParser.Caller:
	                this.state = 121;
	                this.stmtCaller();
	                break;
	            case GenaParser.Callinto:
	                this.state = 122;
	                this.stmtCallinto();
	                break;
	            case GenaParser.DataType:
	            case GenaParser.Iden:
	                this.state = 123;
	                this.stmtNse();
	                this.state = 124;
	                this.match(GenaParser.T__0);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 128; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GenaParser.T__8) | (1 << GenaParser.Copath) | (1 << GenaParser.Extends) | (1 << GenaParser.Callinto) | (1 << GenaParser.Caller) | (1 << GenaParser.DataType) | (1 << GenaParser.Iden))) !== 0));
	        this.state = 130;
	        this.match(GenaParser.T__7);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stmtCopath() {
	    let localctx = new StmtCopathContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, GenaParser.RULE_stmtCopath);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 132;
	        this.match(GenaParser.Copath);
	        this.state = 133;
	        this.nseIden();
	        this.state = 134;
	        this.match(GenaParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stmtExtends() {
	    let localctx = new StmtExtendsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, GenaParser.RULE_stmtExtends);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this.match(GenaParser.Extends);
	        this.state = 137;
	        this.nseIden();
	        this.state = 142;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===GenaParser.T__1) {
	            this.state = 138;
	            this.match(GenaParser.T__1);
	            this.state = 139;
	            this.nseIden();
	            this.state = 144;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 145;
	        this.match(GenaParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stmtInitializes() {
	    let localctx = new StmtInitializesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, GenaParser.RULE_stmtInitializes);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 147;
	        this.match(GenaParser.T__8);
	        this.state = 148;
	        this.nseIden();
	        this.state = 153;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===GenaParser.T__1) {
	            this.state = 149;
	            this.match(GenaParser.T__1);
	            this.state = 150;
	            this.nseIden();
	            this.state = 155;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 156;
	        this.match(GenaParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stmtCaller() {
	    let localctx = new StmtCallerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, GenaParser.RULE_stmtCaller);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this.match(GenaParser.Caller);
	        this.state = 159;
	        this.eventPath();
	        this.state = 160;
	        this.match(GenaParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stmtCallinto() {
	    let localctx = new StmtCallintoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, GenaParser.RULE_stmtCallinto);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 162;
	        this.match(GenaParser.Callinto);
	        this.state = 163;
	        this.eventPath();
	        this.state = 164;
	        this.match(GenaParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	eventPath() {
	    let localctx = new EventPathContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, GenaParser.RULE_eventPath);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 166;
	        this.eventSpec();
	        this.state = 171;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===GenaParser.EvtPathConnector) {
	            this.state = 167;
	            this.match(GenaParser.EvtPathConnector);
	            this.state = 168;
	            this.eventSpec();
	            this.state = 173;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	eventSpec() {
	    let localctx = new EventSpecContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, GenaParser.RULE_eventSpec);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 174;
	        this.eventName();
	        this.state = 176;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===GenaParser.T__3) {
	            this.state = 175;
	            this.eventTargetArgs();
	        }

	        this.state = 179;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===GenaParser.T__6 || _la===GenaParser.Callinto) {
	            this.state = 178;
	            this.eventCurly();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	eventName() {
	    let localctx = new EventNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, GenaParser.RULE_eventName);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181;
	        this.match(GenaParser.Iden);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	eventTargetArgs() {
	    let localctx = new EventTargetArgsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, GenaParser.RULE_eventTargetArgs);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 183;
	        this.match(GenaParser.T__3);
	        this.state = 184;
	        this.eventTarget();
	        this.state = 185;
	        this.match(GenaParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	eventTarget() {
	    let localctx = new EventTargetContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, GenaParser.RULE_eventTarget);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 187;
	        this.nseIden();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	eventCurly() {
	    let localctx = new EventCurlyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, GenaParser.RULE_eventCurly);
	    try {
	        this.state = 194;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case GenaParser.T__6:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 189;
	            this.match(GenaParser.T__6);
	            this.state = 190;
	            this.stmtCaller();
	            break;
	        case GenaParser.Callinto:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 191;
	            this.stmtCallinto();
	            this.state = 192;
	            this.match(GenaParser.T__7);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

GenaParser.EOF = antlr4.Token.EOF;
GenaParser.T__0 = 1;
GenaParser.T__1 = 2;
GenaParser.T__2 = 3;
GenaParser.T__3 = 4;
GenaParser.T__4 = 5;
GenaParser.T__5 = 6;
GenaParser.T__6 = 7;
GenaParser.T__7 = 8;
GenaParser.T__8 = 9;
GenaParser.WS = 10;
GenaParser.Comment = 11;
GenaParser.EvtPathConnector = 12;
GenaParser.OPCHAR = 13;
GenaParser.Noid = 14;
GenaParser.Copath = 15;
GenaParser.Class = 16;
GenaParser.Data = 17;
GenaParser.Extends = 18;
GenaParser.Nary = 19;
GenaParser.Event = 20;
GenaParser.Param = 21;
GenaParser.Callinto = 22;
GenaParser.Caller = 23;
GenaParser.Belongsto = 24;
GenaParser.PiggyAfter = 25;
GenaParser.PiggyInto = 26;
GenaParser.PiggyBefore = 27;
GenaParser.DataType = 28;
GenaParser.Iden = 29;
GenaParser.INT = 30;
GenaParser.FLOAT = 31;

GenaParser.RULE_doc = 0;
GenaParser.RULE_docStmt = 1;
GenaParser.RULE_docStmtNse = 2;
GenaParser.RULE_stmtNse = 3;
GenaParser.RULE_nseModel = 4;
GenaParser.RULE_nseModelName = 5;
GenaParser.RULE_nseModelProp = 6;
GenaParser.RULE_nseModelPropKey = 7;
GenaParser.RULE_nseModelPropVal = 8;
GenaParser.RULE_nseIden = 9;
GenaParser.RULE_nseCurly = 10;
GenaParser.RULE_stmtCopath = 11;
GenaParser.RULE_stmtExtends = 12;
GenaParser.RULE_stmtInitializes = 13;
GenaParser.RULE_stmtCaller = 14;
GenaParser.RULE_stmtCallinto = 15;
GenaParser.RULE_eventPath = 16;
GenaParser.RULE_eventSpec = 17;
GenaParser.RULE_eventName = 18;
GenaParser.RULE_eventTargetArgs = 19;
GenaParser.RULE_eventTarget = 20;
GenaParser.RULE_eventCurly = 21;

class DocContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GenaParser.RULE_doc;
    }

	docStmt = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DocStmtContext);
	    } else {
	        return this.getTypedRuleContext(DocStmtContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.enterDoc(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.exitDoc(this);
		}
	}


}



class DocStmtContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GenaParser.RULE_docStmt;
    }

	docStmtNse() {
	    return this.getTypedRuleContext(DocStmtNseContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.enterDocStmt(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.exitDocStmt(this);
		}
	}


}



class DocStmtNseContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GenaParser.RULE_docStmtNse;
    }

	stmtNse() {
	    return this.getTypedRuleContext(StmtNseContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.enterDocStmtNse(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.exitDocStmtNse(this);
		}
	}


}



class StmtNseContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GenaParser.RULE_stmtNse;
    }

	nseIden = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NseIdenContext);
	    } else {
	        return this.getTypedRuleContext(NseIdenContext,i);
	    }
	};

	nseModel = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NseModelContext);
	    } else {
	        return this.getTypedRuleContext(NseModelContext,i);
	    }
	};

	nseCurly() {
	    return this.getTypedRuleContext(NseCurlyContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.enterStmtNse(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.exitStmtNse(this);
		}
	}


}



class NseModelContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GenaParser.RULE_nseModel;
    }

	nseModelName() {
	    return this.getTypedRuleContext(NseModelNameContext,0);
	};

	nseModelProp = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NseModelPropContext);
	    } else {
	        return this.getTypedRuleContext(NseModelPropContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.enterNseModel(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.exitNseModel(this);
		}
	}


}



class NseModelNameContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GenaParser.RULE_nseModelName;
    }

	Event() {
	    return this.getToken(GenaParser.Event, 0);
	};

	Param() {
	    return this.getToken(GenaParser.Param, 0);
	};

	nseIden() {
	    return this.getTypedRuleContext(NseIdenContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.enterNseModelName(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GenaListener ) {
	        listener.exitNseModelName(this);
		}
	}


}



class NseModelPropContext extends antlr4.ParserRuleContext {
